--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
     </header>
     <main class="inner">
       <section class="bunner" id="bunner">
-        <div class="bunner__bg imgs"><img src="./img/bunner/i-1.webp" alt="img"></div>
+        <div class="bunner__bg imgs"><img data-src="./img/bunner/i-1.webp" alt="img"></div>
         <div class="bunner__person rel">
-          <div class="imgs"><img src="./img/bunner/i-2.webp" alt="img"></div>
+          <div class="imgs"><img data-src="./img/bunner/i-2.webp" alt="img"></div>
         </div>
         <div class="container">
           <div class="bunner__body">
